--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
   <body>
     <div class="container1">
       <div class="upper_part">
-        <h2>Your Result</h2>
-        <div class="result_circle">76 of 100</div>
+        <h3 class="result">Your Result</h3>
+        <div class="circle_container">
+          <div class="result_circle">
+            <h1>76</h1>
+            <h3>of 100</h3>
+          </div>
+        </div>
         <h2>Great</h2>
-        <p class="others_text">
+        <h3 class="others_text">
           You scored higher than 65% of the people who have taken these tests.
-        </p>
+        </h3>
       </div>
       <div class="lower_part">
         <h2>Summary</h2>
