last old version before branch fork

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         <h3 class="result">Your Result</h3>
         <div class="circle_container">
           <div class="result_circle">
-            <h1>76</h1>
-            <h3>of 100</h3>
+            <div class="result_circle_grid_1"><h1>76</h1></div>
+            <div class="result_circle_grid_2">
+              <h3 class="of_100">of 100</h3>
+            </div>
           </div>
         </div>
         <h2>Great</h2>
