--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
   <body>
     <div class="container1">
       <div class="upper_part">
-        <h3 class="result">Your Result</h3>
+        <div class="your-result"><h3 class="result">Your Result</h3></div>
         <div class="circle_container">
-          <div class="result_circle">
-            <div class="result_circle_grid_1"><h1>76</h1></div>
-            <div class="result_circle_grid_2">
+          <div class="circle">
+            <div class="result_circle_grid_1"></div>
+            <div class="result_circle_grid_2"><h1>76</h1></div>
+            <div class="result_circle_grid_3">
               <h3 class="of_100">of 100</h3>
             </div>
           </div>
