--- a/index.html
+++ b/index.html
@@ -30,20 +30,30 @@
   <body>
     <div class="container1">
       <div class="upper_part">
+        <div class="placeholder"></div>
         <div class="your-result"><h3 class="result">Your Result</h3></div>
-        <div class="circle_container">
-          <div class="circle">
-            <div class="result_circle_grid_1"></div>
-            <div class="result_circle_grid_2"><h1>76</h1></div>
-            <div class="result_circle_grid_3">
-              <h3 class="of_100">of 100</h3>
-            </div>
-          </div>
+        <div class="placeholder"></div>
+        <div class="placeholder"></div>
+        <div class="placeholder"></div>
+        <div class="placeholder"></div>
+        <div class="placeholder"></div>
+        <div class="circle">
+          <div class="result_circle_grid_1"></div>
+          <div class="result_circle_grid_2"><h1>76</h1></div>
+          <div class="result_circle_grid_3"><h3 class="of_100">of 100</h3></div>
         </div>
-        <h2>Great</h2>
-        <h3 class="others_text">
-          You scored higher than 65% of the people who have taken these tests.
-        </h3>
+        <div class="placeholder"></div>
+        <div class="placeholder"></div>
+        <div class="placeholder"></div>
+        <div class="placeholder"></div>
+        <div class="placeholder"></div>
+        <div class="great"><h2>Great</h2></div>
+        <div class="placeholder"></div>
+        <div class="others-info">
+          <h3 class="others_text">
+            You scored higher than 65% of the people who have taken these tests.
+          </h3>
+        </div>
       </div>
       <div class="lower_part">
         <h2>Summary</h2>
