--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
       </div>
       <div class="lower_part">
+        <div class="buffer"></div>
         <div class="summary">Summary</div>
         <div class="summary_breakdown reacting">
           <div class="svg1">
