added personal link for conitnue button for now

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="summary-name">Visual</div>
           <div class="score">72 / 100</div>
         </div continue-wrapper>
-        <div class="continue"><a href="#">Continue</a></div>
+        <div class="continue"><a href="https://github.com/gaifut">Continue</a></div>
       </div>
     </div>
     <div class="attribution">
